# predict-trip-duration

./: .flake8  Makefile  README.md  main.py  nose2.cfg  pyproject.toml
.github/workflows/: makefile.yml
functions/: __init__.py  first.py  fourth.py  second.py  third.py
src/: main.ipynb  main.py  sample.csv
test/: first_test.py  fourth_test.py  second_test.py  third_test.py
