[tool.poetry]
name = "predict-trip-duration"
version = "0.1.0"
description = ""
authors = ["Ismael Mousa <ismaelramzimousa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
scipy = "^1.11.4"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
nose2 = "^0.14.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
