[tool.poetry]
name = "predict-trip-duration"
version = "0.1.0"
description = ""
authors = ["Ismael Mousa <ismaelramzimousa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
scipy = "^1.11.4"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
